fix for exhibition grid on small screens

--- a/page-specific/_on-the-wall.scss
+++ b/page-specific/_on-the-wall.scss
@@ -85,8 +85,11 @@
 
 @media screen and (max-width: 766px) {
 	.exhibition_grid{
+		background-image: none !important;
 		.exhibition{
 			.image{
+				height: auto;
+				width: auto;
 				img{
 					max-width: 100% !important;
 				}
